# StockExchange

./: .gitignore  CMakeLists.txt  LICENSE  README.md  server  server.sh
data/: symbols.txt
img/: Diagram 2023-05-05 11-44-12.uxf
src/: client.cpp  clientHandler.cpp  clientHandler.h  matchingEngine.cpp  matchingEngine.h  order.cpp  order.h  orderBook.cpp  orderBook.h  priceComparators.cpp  priceComparators.h  server.cpp  side.cpp  side.h  socketService.cpp  socketService.h
